@@ -10,8 +10,10 @@ Changelog for HTML-Tree
 
     [ENHANCEMENTS]
     * new_from_file & new_from_url now let you set parsing attributes
+    * New shortcut constructor new_from_string is like new_from_content,
+      but allows you to set parsing attributes
     * Setting the new self_closed_tags attribute to 1 makes TreeBuilder
-      handle XML-style self-closed tags (e.g. <a id="a1" />).
+      handle XML-style self-closed tags (e.g. <a id="a1" />)
     * New child_nodes method makes for simpler recursion
 
     [DOCUMENTATION]
